--- a/web tech l2/contact.html
+++ b/web tech l2/contact.html
@@ -6,21 +6,27 @@
 	<body>
 		<table border="1px" width="70%" align="center">
 			<tr align="center">
-				<td colspan="3"><a href="employee.html"><h1>Employee Information Manager</h1></a></td>
+				<td colspan="3">
+					<a href="employee.html" style="text-decoration:none">
+						<h1>Employee Information</h1> 
+						<h1>Manager</h1>
+					</a>
+				
+				</td>
 			</tr>
 			
 			<tr align="center">
 				<td>View Feedback</td>
-				<td><a href="input.html">Input Feedback</a></td>
-				<td><a href="contact.html">Contact Us</a></td>
+				<td><a href="input.html" style="text-decoration:none">Input Feedback</a></td>
+				<td><a href="contact.html" style="text-decoration:none">Contact Us</a></td>
 			</tr>
 			<tr>
 				<td colspan="3">
-					<p>
+					<p style="margin-left:15px">
 						<strong>About Us:</strong><br/>
 						pecimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 					</p>
-					<p>
+					<p style="margin-left:15px;align:center">
 						<strong>Details:</strong><br/>
 						<img src="img1.jpg"/>
 						<img src="img2.jpg"/>
@@ -29,7 +35,7 @@
 				</td>	
 			</tr>
 			<tr align="center">
-				<td colspan="3">Footer</td>
+				<td colspan="3"><h1>Footer</h1></td>
 			</tr>
 		</table>
 	</body>
