--- a/web tech l2/employee.html
+++ b/web tech l2/employee.html
@@ -4,15 +4,21 @@
 		<title>Employee Information Manager</title>
 	</head>
 	<body>
-		<table border="1px" width="100%">
+		<table border="1px" width="70%" align="center">
 			<tr align="center">
-				<td colspan="3"><a href="employee.html"><h1>Employee Information Manager</h1></a></td>
+				<td colspan="3">
+					<a href="employee.html" style="text-decoration:none">
+						<h1>Employee Information</h1> 
+						<h1>Manager</h1>
+					</a>
+				
+				</td>
 			</tr>
 			
 			<tr align="center">
 				<td>View Feedback</td>
-				<td><a href="input.html">Input Feedback</a></td>
-				<td><a href="contact.html">Contact Us</a></td>
+				<td><a href="input.html" style="text-decoration:none">Input Feedback</a></td>
+				<td><a href="contact.html" style="text-decoration:none">Contact Us</a></td>
 			</tr>
 			<tr>
 				<td colspan="3">
@@ -70,7 +76,7 @@
 				</td>	
 			</tr>
 			<tr>
-				<td colspan="3" align="center">Footer</td>
+				<td colspan="3" align="center"><h1>Footer</h1></td>
 			</tr>
 		</table>
 	</body>
